admission/ValidatingAdmissionPolicy/policies/capabilities-drop-all/ephemeralcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: capabilities-drop-all-ephemeralcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: capabilities-drop-all-ephemeralcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
