admission/ValidatingAdmissionPolicy/policies/capabilities-drop-all/ephemeralcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: capabilities-drop-all-ephemeralcontainers
  annotations:
    security.kubeapt.io/displayName: 'Capabilities Drop All'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for capabilities-drop-all/ephemeralcontainers.
    security.kubeapt.io/resource: Ephemeralcontainers
    security.kubeapt.io/severity: "5"
    security.kubeapt.io/remediation: Adjust workloads to satisfy the capabilities-drop-all/ephemeralcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: f2f40dab-4e79-5c18-994c-259829febef6
  labels:
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/audit: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/enforce: 'false-true'
    capabilities-drop-all-ephemeralcontainers.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          has(ec.securityContext) &&
          has(ec.securityContext.capabilities) &&
          has(ec.securityContext.capabilities.drop) &&
          ec.securityContext.capabilities.drop.exists(d, d == "ALL")
        )
      message: >
        spec.ephemeralContainers[*].securityContext.capabilities.drop must exist and include "ALL".
